Final production setup with Clerk integration

--- a/extention/manifest.json
+++ b/extention/manifest.json
@@ -5,37 +5,21 @@
   "description": "Grammarly for AI prompts - enhance your prompts instantly",
   "permissions": [
     "storage",
-    "activeTab"
+    "activeTab",
+    "tabs"
   ],
   "host_permissions": [
-    "https://superprompt-lac.vercel.app/*"
+    "https://superprompt-lac.vercel.app/*",
+    "https://modest-shrew-1.accounts.dev/*"
   ],
   "background": {
     "service_worker": "background.js"
   },
   "action": {
     "default_popup": "popup.html",
-    "default_title": "Prompt Enhancer",
-    "default_icon": {
-      "16": "icon.png",
-      "32": "icon.png",
-      "48": "icon.png",
-      "128": "icon.png"
-    }
-  },
-  "icons": {
-    "16": "icon.png",
-    "32": "icon.png",
-    "48": "icon.png",
-    "128": "icon.png"
+    "default_title": "Prompt Enhancer"
   },
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
-  },
-  "web_accessible_resources": [
-    {
-      "resources": ["popup.html"],
-      "matches": ["<all_urls>"]
-    }
-  ]
+  }
 }
