--- a/extention/manifest.json
+++ b/extention/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Prompt Enhancer",
+  "name": "SuperPrompt",
   "version": "1.0.0",
   "description": "Grammarly for AI prompts - enhance your prompts instantly",
   "permissions": [
@@ -17,7 +17,19 @@
   },
   "action": {
     "default_popup": "popup.html",
-    "default_title": "Prompt Enhancer"
+    "default_title": "SuperPrompt",
+    "default_icon": {
+      "16": "icon.png",
+      "32": "icon.png",
+      "48": "icon.png",
+      "128": "icon.png"
+    }
+  },
+  "icons": {
+    "16": "icon.png",
+    "32": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
   },
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
