--- a/backend/package.json
+++ b/backend/package.json
@@ -1,51 +1,20 @@
 {
-    "name": "prompt-enhancer-api",
+    "name": "text-enhancer-api",
     "version": "1.0.0",
-    "description": "Backend API for Prompt Enhancer Chrome Extension",
+    "description": "Simple text enhancement API",
     "main": "server.js",
     "scripts": {
-      "build": "echo 'Build complete'",
       "start": "node server.js",
-      "dev": "nodemon server.js",
-      "dev:fallback": "node server.js",
-      "dev:watch": "npx nodemon server.js",
-      "test": "jest",
-      "lint": "eslint .",
-      "format": "prettier --write ."
+      "dev": "node server.js"
     },
-    "keywords": [
-      "ai",
-      "prompts",
-      "chrome-extension",
-      "api",
-      "openai",
-      "clerk"
-    ],
-    "author": "Your Name",
-    "license": "MIT",
     "dependencies": {
-      "@clerk/clerk-sdk-node": "^4.13.0",
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
       "express": "^4.18.2",
+      "cors": "^2.8.5",
       "express-rate-limit": "^7.1.5",
-      "openai": "^4.20.1",
-      "helmet": "^7.1.0",
-      "compression": "^1.7.4",
-      "winston": "^3.11.0"
-    },
-    "devDependencies": {
-      "nodemon": "^3.0.2",
-      "jest": "^29.7.0",
-      "supertest": "^6.3.3",
-      "eslint": "^8.55.0",
-      "prettier": "^3.1.0"
+      "dotenv": "^16.3.1",
+      "openai": "^4.20.1"
     },
     "engines": {
       "node": ">=18.0.0"
-    },
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/yourusername/prompt-enhancer-api.git"
     }
   }
