--- a/extention/manifest.json
+++ b/extention/manifest.json
@@ -1,42 +1,31 @@
 {
   "manifest_version": 3,
   "name": "SuperPrompt",
-  "version": "1.0.0",
-  "description": "Highlight text, enhance with AI, and replace—like Grammarly, but for prompts.",
-  "permissions": [
-    "activeTab",
-    "storage",
-    "scripting"
-  ],
-  "host_permissions": [
-    "https://superprompt-rlc9qv1v1-hass-projects-b72778ab.vercel.app/*",
-    "https://superprompt-lac.vercel.app/*"
-  ],
-  "icons": {
-    "16": "icon.png",
-    "32": "icon.png",
-    "48": "icon.png",
-    "128": "icon.png"
+  "description": "Rewrite prompts using AI, like Grammarly for AI.",
+  "version": "1.0",
+  "permissions": ["scripting", "activeTab", "contextMenus", "storage"],
+  "host_permissions": ["<all_urls>"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icon.png",
+      "48": "icon.png",
+      "128": "icon.png"
+    }
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"],
-      "css": ["content.css"],
       "run_at": "document_idle"
     }
   ],
-  "background": {
-    "service_worker": "background.js"
-  },
-  "action": {
-    "default_title": "SuperPrompt",
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icon.png",
-      "32": "icon.png",
-      "48": "icon.png",
-      "128": "icon.png"
-    }
+  "icons": {
+    "16": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
   }
 }
