--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,21 @@
-# Environment variables
+# Environment variables and secrets
 .env
 .env.local
 .env.production
+*.key
+*.pem
+
+# API Keys (add any files with actual keys)
+# content.js
+# popup.js
 
 # Dependencies
 node_modules/
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-# Production builds
+# Build files
 dist/
 build/
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
 
 # IDE files
 .vscode/
@@ -28,13 +23,17 @@ Thumbs.db
 *.swp
 *.swo
 
+# OS files
+.DS_Store
+Thumbs.db
+
+# Chrome extension specific
+*.crx
+*.pem
+
 # Logs
-logs/
 *.log
 
-# Chrome extension files (temporary)
-extension-production/
-*.zip
-
-# Vercel
-.vercel
+# Temporary files
+*.tmp
+*.temp
